base/minio/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  labels:
    app: minio
  namespace: 5stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: 5stack-minio
                operator: In
                values:
                  - "true"
      containers:
        - name: minio
          image: quay.io/minio/minio:latest
          ports:
            - containerPort: 9000
            - containerPort: 9090
          command:
            - /bin/bash
            - -c
          args:
            - |
              mkdir -p /data/5stack &&
              minio server /data --console-address :9090 &
              sleep 10 &&
              mc alias set myminio http://localhost:9000 ${MINIO_ROOT_USER} ${MINIO_ROOT_PASSWORD} &&
              mc mb myminio/5stack || true
              mc admin user add myminio ${S3_ACCESS_KEY} ${S3_SECRET} &&
              mc admin policy attach myminio readwrite --user=${S3_ACCESS_KEY}
              wait
          volumeMounts:
            - name: minio-data
              mountPath: /data
      volumes:
        - name: minio-data
          persistentVolumeClaim:
            claimName: minio-pvc
