base/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
  name: s3-console
  namespace: 5stack
spec:
  ingressClassName: nginx
  rules:
    - host: ${S3_CONSOLE_HOST}
      http:
        paths:
          - backend:
              service:
                name: minio
                port:
                  number: 9090
            path: /(.*)
            pathType: ImplementationSpecific
